--- a/src/editor/Editor.css
+++ b/src/editor/Editor.css
@@ -1,4 +1,6 @@
-textarea {
-    resize: none !important;
+#editor {
+	resize: none;
     overflow: auto;
+    padding: 8px 16px;
+    box-sizing: border-box;
 }
