--- a/src/editor/Editor.css
+++ b/src/editor/Editor.css
@@ -5,6 +5,7 @@ textarea {
     box-sizing: border-box;
     width: 50%;
     border: none;
+    outline: none;
 }
 
 .container {
@@ -14,5 +15,6 @@ textarea {
 }
 
 .output {
+    padding: 8px 16px;
     border-left: 1px solid #000;
 }
